# uwb

./: .gitignore  CMakeLists.txt  package.xml
include/: coordinate_mat_transformation.h  mec_transformation.h  uwb.h  uwb_class.h  uwb_positioning.h
launch/: setup_uwb_fixed_tag_tf.launch  uwb_positioning.launch  uwb_start.launch
msg/: uwb_fix.msg  uwb_raw.msg
scripts/: cal_average_pos.py  cal_ndt_mean_std.py  cal_std_mean.py  cal_std_mean_tag_at_same_point.py  lla2enu.py  marker_display.py  ndt_csv_recorder.py  preprocess.py  uwb_csv_recorder.py
src/: main_positioning.cpp  uwb.cpp  uwb_calibration.cpp  uwb_class.cpp  uwb_ndt_compare.cpp  uwb_positioning.cpp  uwb_start.cpp
uwb_raw_data/: 20221004_uwb_raw_11m.bag  20221004_uwb_raw_13m.bag  20221004_uwb_raw_15m.bag  20221004_uwb_raw_17m.bag  20221004_uwb_raw_19m.bag  20221004_uwb_raw_21m.bag  20221004_uwb_raw_23m.bag  20221004_uwb_raw_25m.bag  20221004_uwb_raw_27m.bag  20221004_uwb_raw_3m.bag  20221004_uwb_raw_5m.bag  20221004_uwb_raw_7m.bag  20221004_uwb_raw_9m.bag
uwb_raw_data/20221004/csv/preprocessed/: T0_11m.csv  T0_13m.csv  T0_15m.csv  T0_17m.csv  T0_19m.csv  T0_21m.csv  T0_23m.csv  T0_25m.csv  T0_27m.csv  T0_3m.csv  T0_5m.csv  T0_7m.csv  T0_9m.csv
uwb_raw_data/20221004/csv/raw/: T0_11m.csv  T0_13m.csv  T0_15m.csv  T0_17m.csv  T0_19m.csv  T0_21m.csv  T0_23m.csv  T0_25m.csv  T0_27m.csv  T0_3m.csv  T0_5m.csv  T0_7m.csv  T0_9m.csv
